cmake_minimum_required(VERSION 3.21)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(0001 src/0001.cpp)
add_executable(0146 src/0146.cpp)
add_executable(0203 src/0203.cpp)
add_executable(0206 src/0206.cpp)
add_executable(0208 src/0208.cpp)
add_executable(0704 src/0704.cpp)
add_executable(s2-063 src/s2-063.cpp)
add_executable(0707 src/0707.cpp)
add_executable(0024 src/0024.cpp)
add_executable(0025 src/0025.cpp)
add_executable(0019 src/0019.cpp)
add_executable(0160 src/0160.cpp)
add_executable(0142 src/0142.cpp)
add_executable(0141 src/0141.cpp)
add_executable(0021 src/0021.cpp)
add_executable(0234 src/0234.cpp)
add_executable(0232 src/0232.cpp)
add_executable(0225 src/0225.cpp)
add_executable(0002 src/0002.cpp)
add_executable(0003 src/0003.cpp)
add_executable(0076 src/0076.cpp)
add_executable(0215 src/0215.cpp)
add_executable(0053 src/0053.cpp)
add_executable(quicksort src/quicksort.cpp)
add_executable(0912 src/0912.cpp)
add_executable(0015 src/0015.cpp)
add_executable(0102 src/0102.cpp)
add_executable(0088 src/0088.cpp)
add_executable(0103 src/0103.cpp)
add_executable(0033 src/0033.cpp)
add_executable(0236 src/0236.cpp)
add_executable(0005 src/0005.cpp)
add_executable(0199 src/0199.cpp)
add_executable(0020 src/0020.cpp)
add_executable(0121 src/0121.cpp)
add_executable(0200 src/0200.cpp)
add_executable(0094 src/0094.cpp)
add_executable(0122 src/0122.cpp)
add_executable(0153 src/0153.cpp)
add_executable(0092 src/0092.cpp)
add_executable(0035 src/0035.cpp)
add_executable(0226 src/0226.cpp)
add_executable(0112 src/0112.cpp)
add_executable(0113 src/0113.cpp)
add_executable(0114 src/0114.cpp)
add_executable(0654 src/0654.cpp)
add_executable(0105 src/0105.cpp)
add_executable(0106 src/0106.cpp)
add_executable(0652 src/0652.cpp)
add_executable(0124 src/0124.cpp)
add_executable(0700 src/0700.cpp)
add_executable(0674 src/0674.cpp)
add_executable(0230 src/0230.cpp)
add_executable(0718 src/0718.cpp)
add_executable(0056 src/0056.cpp)
add_executable(0070 src/0070.cpp)
add_executable(0239 src/0239.cpp)
add_executable(0148 src/0148.cpp)
add_executable(0022 src/0022.cpp)
add_executable(0031 src/0031.cpp)
add_executable(0039 src/0039.cpp)
add_executable(0046 src/0046.cpp)
add_executable(0047 src/0047.cpp)
add_executable(0054 src/0054.cpp)
add_executable(0057 src/0057.cpp)
add_executable(0072 src/0072.cpp)
add_executable(0077 src/0077.cpp)
add_executable(0078 src/0078.cpp)
add_executable(0090 src/0090.cpp)
add_executable(0155 src/0155.cpp)
